# OverCoDe

./: .gitignore  CMakeLists.txt  ClusteredGraph.h  DistributedProcess.h  OverCoDe.h  README.md  RandomGenerator.h  compareToTruth.py  count_error.py  find_overlaps.sh  main.cpp  makefile  multiple.sh  sim 1.py
include/: ArgsParser.h  ClusteredGraph.h  Graph.h  OverCoDe.h  RandomGenerator.h  SyntheticEgoGraph.h
src/: ArgsParser.cpp  OverCoDe.cpp  SyntheticEgoGraph.cpp  main.cpp
tests/: test_ARGSPARSER.cpp  test_CLUSTEREDGRAPH.cpp  test_GRAPH.cpp  test_OVERCODE.cpp  test_RANDOMGENERATOR.cpp  test_SYNTHETICEGOGRAPH.cpp
